fixed issues with spacing on smaller screens

--- a/static/css/development.css
+++ b/static/css/development.css
@@ -70,6 +70,12 @@ img {
     background-color: #fff;
 }
 
+@media screen and (max-width: 321px){
+    h2.staal {
+        font-size: 3rem;
+    }
+}
+
 @media screen and (max-width: 600px) {
     /* Place the timelime to the left */
     .timeline::after {
@@ -99,5 +105,9 @@ img {
     /* Make all right containers behave like the left ones */
     .right {
         left: 0%;
+    }
+
+    a.tech-element {
+        font-size: 10pt;
     }
 }
